# trippy

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml  launchmatic.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/public/icons/: README.md
apps/web/src/: main.tsx  styles.css
apps/web/src/ai/: jobs.ts  mix-assistant.ts  stems.test.ts  stems.ts  tempo.test.ts  tempo.ts
apps/web/src/audio/: controller.ts  decode.ts  engine-worker.ts  engine.ts  fx-state.ts  ringbuffer.test.ts  ringbuffer.ts  wav-encode.test.ts  wav-encode.ts  waveform-cache.ts  worklet-processor.ts
apps/web/src/cloud/: sync.ts
apps/web/src/plugins/: wam.ts
apps/web/src/project/: opfs.ts  store.ts
apps/web/src/ui/: App.test.tsx  (+5 more)
crates/trippy-dsp-prims/: Cargo.toml
crates/trippy-dsp-prims/src/: lib.rs
crates/trippy-engine/: Cargo.toml
crates/trippy-engine/src/: acid.rs  automation.rs  clip.rs  engine.rs  graph.rs  lib.rs  midi.rs  probe.rs  recording.rs  sampler.rs  source.rs  stretch.rs  track.rs  transport.rs  warp.rs  wasm.rs  wav.rs
crates/trippy-engine/src/fx/: biquad.rs  compressor.rs  delay.rs  eq.rs  mod.rs  reverb.rs  saturation.rs
docs/: M8-cloud.md  M9-plugin-host.md
infra/: nginx.conf
scripts/: gen-icons.mjs
tools/acid-import/: README.md
workers/ai-gateway/: README.md  package.json  tsconfig.json  wrangler.toml
workers/ai-gateway/src/: index.ts
(+7 files in other folders)
