[workspace]
resolver = "2"
members = [
    "crates/trippy-engine",
    "crates/trippy-dsp-prims",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["trippy contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/principalforce/trippy"

[workspace.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
